--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.6",
+    "@apollo/client": "^3.8.0-rc.2",
+    "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "graphql": "^16.8.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "react-pdf": "^7.5.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   }
