--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.0-rc.2",
     "@apollo/experimental-nextjs-app-support": "^0.4.3",
+    "@vercel/analytics": "^1.1.1",
     "graphql": "^16.8.1",
     "next": "latest",
     "react": "latest",
